# ScanCUDA

./: CMakeLists.txt  README.md  main.cpp  scan.cu
